--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -1,14 +1,14 @@
 #https://www.nginx.com/resources/wiki/start/topics/tutorials/config_pitfalls/
 
 user  nginx;
-worker_processes  1;
+worker_processes  auto;
 
 error_log  /var/log/nginx/error.log warn;
 pid        /var/run/nginx.pid;
 
 
 events {
-    worker_connections  1024;
+    worker_connections  512;
 }
 
 #http://nginx.org/en/docs/http/request_processing.html
