--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -12,7 +12,7 @@ events {
 }
 
 #http://nginx.org/en/docs/http/request_processing.html
-#request order server match -> location match regex -> regex match on longest prefix
+#request order server match -> location match regex -> longest prefix
 http {
     server {
         #another way to do index slash
@@ -25,7 +25,7 @@ http {
         root /usr/share/nginx/html;
         index index.html;
         #custom 404 w/ code
-        error_page 404 =301 /404.html;
+        error_page 404 = 301 /404.html;
 
         #redirect with status code
         location / {
